--- a/style/style.css
+++ b/style/style.css
@@ -72,6 +72,9 @@ body {
  	text-decoration: none;
  	color: #202020;
 }
+.pets-nav-link:hover {
+	color: #510fad;
+}
 
 .pets-main {
 	padding: 50px 0 150px 0;
@@ -333,6 +336,18 @@ body {
 	line-height: 30px;
 	letter-spacing: 0.05em;; 
 	color: #202020; 
+	position: relative;
+}
+
+.comment-column-title:before {
+	content: "";
+	background: url(../images/spritesheet.png) no-repeat;
+	display: block;
+	width: 81px;
+    height: 66px;
+    background-position: -5px -35px;
+    position: absolute;
+    top: -80px;
 }
 
 .comment-date {
@@ -548,6 +563,11 @@ body {
  	color: #727173;
  	padding-right: 30px;
 }
+
+.footer-link:hover {
+	color: #510fad;
+}
+
 .footer-social {
 	margin-left: 919px;
 	margin-top: -45px;
