--- a/style/style.css
+++ b/style/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 .pets-main {
-	padding: 50px 0 150px 0;
+	padding: 50px 0 250px 0;
 }
 
 
@@ -120,9 +120,31 @@ body {
 .about-title-block {
 	width: 1020px;
 	margin: 0 auto;
-	background-image: url(../images/backround_shape.png);
+	/*background-image: url(../images/backround_shape.png);
+	background-repeat: no-repeat;*/
+	padding: 70px 0;
+	background-color: #510fad;
+	position: relative;
+}
+.about-title-block:before {
+	content: '';
+	background-image: url(../images/backround_shape_up.png);
+	position: absolute;
 	background-repeat: no-repeat;
-	padding: 145px 0 225px 0;
+	height: 100px;
+	width: 1020px;
+	top: -13%;
+}
+
+.about-title-block:after {
+	content: '';
+	background-image: url(../images/backround_shape_douwn.png);
+	position: absolute;
+	position: absolute;
+	background-repeat: no-repeat;
+	height: 100px;
+	width: 1020px;
+	top: 100%;
 }
 
 .about-title-header {
@@ -214,6 +236,7 @@ body {
 	width: 940px;
 	margin: 0 auto;
 	margin-top: 150px;
+	padding-top: 80px;
 }
 
 .our-dogs-title {
